moi them list san pham

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="fogot_password"><u>Fogot Password ?</u></string>
     <string name="open"> Open nav</string>
     <string name="close"> Close nav</string>
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
